--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="#" class="nav-link active" data-page="structure">Titres Pro</a></li>
+                    <li><a href="index.html" class="nav-link active" data-page="structure">Titres Pro</a></li>
                     <li><a href="./pages/campus.html" class="nav-link" data-page="campus">Campus </a></li>
                     <li><a href="./pages/entreprise.html" class="nav-link" data-page="Periode en entreprise"> Entreprise</a></li>
                     <li><a href="./pages/fad.html" class="nav-link" data-page="FAD">Espace FAD</a></li>
@@ -69,7 +69,7 @@
                 </div>
 
                 <div class="section fade-in">
-                    <h2>Architecture du LMS</h2>
+                    <h2>Architecture type d'un parcours sur LMS ADT : le Titre RET</h2>
                     <div class="timeline-horizontal">
                         <!-- Étape 1 -->
                         <div class="timeline-step">
@@ -79,9 +79,9 @@
                             <div class="timeline-content">
                                 <h3>Tout savoir sur ma formation</h3>
                                 <ul>
-                                    <li>Bien démarrer en formation</li>
-                                    <li>Informations pratiques</li>
-                                    <li>Informations examens</li>
+                                    <li><a href="pages/lms/demarrer_formation.html">Bien démarrer en formation</a></li>
+                                    <li><a href="pages/lms/info_pratiques.html">Informations pratiques</a></li>
+                                    <li><a href="pages/lms/informations_examens.html">Informations examens</a></li>
                                 </ul>
                             </div>
                         </div>
